# dotfiles

./: .gitignore  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
hosts/jsonmen/: configuration.nix  home.nix
modules/home/: ghostty.nix  hyprland.nix  mako.nix  neovim.nix  rofi.nix  theme.nix  tmux.nix  waybar.nix  zsh.nix
modules/home/config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
modules/home/config/nvim/: init.lua  lazy-lock.json
modules/home/config/waybar/: config.jsonc  style.css
modules/home/config/waybar/scripts/: bt-btn-status-script  btn_button_script.py
modules/home/config/waybar/scripts/bt-btn-status/: Cargo.toml
modules/home/config/waybar/scripts/bt-btn-status/src/: main.rs
